objects/GEMS_MBC_Testing__c.object
<CustomObject>
    <description>This object is used to track the different Medical Benefit Coding BA Level Tests that may occur (DTU, FEAK, Shared Accums and CDHP)</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(ISBLANK( MBC_BA_Level_Case_DTU__c ), 
IF( ISBLANK( MBC_BA_Level_Case_Shared_Accums__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK_Testing__c ) , 
MBC_BA_Level_Case_CDHP__r.Account_Name__c, 
MBC_BA_Level_Case_FEAK_Testing__r.Account_Name__c), 
MBC_BA_Level_Case_FEAK__r.Account_Name__c), 
MBC_BA_Level_Case_Shared_Accums__r.Account_Name__c), 
MBC_BA_Level_Case_DTU__r.Account_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF(ISBLANK( MBC_BA_Level_Case_DTU__c ), 
IF( ISBLANK( MBC_BA_Level_Case_Shared_Accums__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK_Testing__c ) , 
MBC_BA_Level_Case_CDHP__r.Account_Number__c, 
MBC_BA_Level_Case_FEAK_Testing__r.Account_Number__c), 
MBC_BA_Level_Case_FEAK__r.Account_Number__c), 
MBC_BA_Level_Case_Shared_Accums__r.Account_Number__c), 
MBC_BA_Level_Case_DTU__r.Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BA No.</label>
        <referenceTo>GEMS_Benefit_Agreement__c</referenceTo>
        <relationshipLabel>GEMS MBC Testing</relationshipLabel>
        <relationshipName>GEMS_MBC_Testing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Effective_Date__c</fullName>
        <formula>IF(ISBLANK( MBC_BA_Level_Case_DTU__c ),  
   IF( ISBLANK( MBC_BA_Level_Case_Shared_Accums__c ) , 
     IF( ISBLANK( MBC_BA_Level_Case_FEAK__c ) , 
       IF( ISBLANK( MBC_BA_Level_Case_FEAK_Testing__c ) ,  
MBC_BA_Level_Case_CDHP__r.GEMS_Account_Submission_Info__r.GEMS_Case_Effective_Date__c , 
MBC_BA_Level_Case_FEAK_Testing__r.GEMS_Account_Submission_Info__r.GEMS_Case_Effective_Date__c), 
MBC_BA_Level_Case_FEAK__r.GEMS_Account_Submission_Info__r.GEMS_Case_Effective_Date__c),    MBC_BA_Level_Case_Shared_Accums__r.GEMS_Account_Submission_Info__r.GEMS_Case_Effective_Date__c),  MBC_BA_Level_Case_DTU__r.GEMS_Account_Submission_Info__r.GEMS_Case_Effective_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <label>Case Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DTU_Record_Id_Invisible__c</fullName>
        <description>This field will hold the record ID of DTU testing record which was used to update the DTU sign-off date.</description>
        <label>DTU Record Id Invisible</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTU_Sign_Off_Date__c</fullName>
        <label>DTU Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEAK_Testing_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked - a new FEAK Testing object is created</description>
        <label>FEAK Testing Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSU_Location__c</fullName>
        <formula>IF(ISBLANK( MBC_BA_Level_Case_DTU__c ), 
IF( ISBLANK( MBC_BA_Level_Case_Shared_Accums__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK_Testing__c ) , 
TEXT(MBC_BA_Level_Case_CDHP__r.GEMS_Account_Submission_Info__r.FSU_Location__c) , 
TEXT(MBC_BA_Level_Case_FEAK_Testing__r.GEMS_Account_Submission_Info__r.FSU_Location__c)), 
TEXT(MBC_BA_Level_Case_FEAK__r.GEMS_Account_Submission_Info__r.FSU_Location__c)), TEXT(MBC_BA_Level_Case_Shared_Accums__r.GEMS_Account_Submission_Info__r.FSU_Location__c)), 
TEXT(MBC_BA_Level_Case_DTU__r.GEMS_Account_Submission_Info__r.FSU_Location__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Center Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <formula>IF(ISBLANK( MBC_BA_Level_Case_DTU__c ), 
IF( ISBLANK( MBC_BA_Level_Case_Shared_Accums__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK_Testing__c ) , 
TEXT(MBC_BA_Level_Case_CDHP__r.GEMS_Account_Submission_Info__r.HCSC_Division__c) , 
TEXT(MBC_BA_Level_Case_FEAK_Testing__r.GEMS_Account_Submission_Info__r.HCSC_Division__c)), 
TEXT(MBC_BA_Level_Case_FEAK__r.GEMS_Account_Submission_Info__r.HCSC_Division__c)), TEXT(MBC_BA_Level_Case_Shared_Accums__r.GEMS_Account_Submission_Info__r.HCSC_Division__c)), 
TEXT(MBC_BA_Level_Case_DTU__r.GEMS_Account_Submission_Info__r.HCSC_Division__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCSC Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBC_BA_Level_Case_CDHP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MBC BA Level Case - CDHP</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CDHP Testing</relationshipLabel>
        <relationshipName>GEMS_MBC_Testing2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBC_BA_Level_Case_DTU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MBC BA Level Case - DTU</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DTU Testing</relationshipLabel>
        <relationshipName>GEMS_MBC_Testing1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBC_BA_Level_Case_FEAK_Testing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MBC BA Level Case - FEAK Testing</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>FEAK Testing</relationshipLabel>
        <relationshipName>GEMS_MBC_Testing4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBC_BA_Level_Case_FEAK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MBC BA Level Case - FEAK</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>FEAK Analysis</relationshipLabel>
        <relationshipName>GEMS_MBC_Testing3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBC_BA_Level_Case_Owner__c</fullName>
        <formula>IF(ISBLANK( MBC_BA_Level_Case_DTU__c ), 
IF( ISBLANK( MBC_BA_Level_Case_Shared_Accums__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK_Testing__c ) , 
MBC_BA_Level_Case_CDHP__r.Owner_Name__c , 
MBC_BA_Level_Case_FEAK_Testing__r.Owner_Name__c), 
MBC_BA_Level_Case_FEAK__r.Owner_Name__c), 
MBC_BA_Level_Case_Shared_Accums__r.Owner_Name__c), 
MBC_BA_Level_Case_DTU__r.Owner_Name__c )</formula>
        <label>MBC BA Level Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBC_BA_Level_Case_Shared_Accums__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MBC BA Level Case - Shared Accums</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Shared Accums Testing</relationshipLabel>
        <relationshipName>GEMS_MBC_Testing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBC_Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MBC Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>GEMS MBC Testing (MBC Parent Case)</relationshipLabel>
        <relationshipName>GEMS_MBC_Testing5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBC_Testing_Type__c</fullName>
        <formula>IF(ISBLANK( MBC_BA_Level_Case_DTU__c ), 
IF( ISBLANK( MBC_BA_Level_Case_Shared_Accums__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK__c ) , 
IF( ISBLANK( MBC_BA_Level_Case_FEAK_Testing__c ) , 
&quot;CDHP&quot; , 
&quot;FEAK Test&quot;), 
&quot;FEAK Analysis&quot;), 
&quot;Shared Accums&quot;), 
&quot;DTU&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBC Testing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOTE__c</fullName>
        <formula>IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;yelow&quot;, 12, 12)+&quot;Upon checking and saving FEAK Testing Needed? a testing record will be created. If later unchecked, pending testing records will not be canceled. Please communicate with assigned FEAK tester to cancel.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>FEAK Testing Required</fullName>
                </value>
                <value>
                    <fullName>No FEAK Testing Needed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GEMS MBC Testing</label>
    <listViews>
        <fullName>DTU_Queue_GEMS_MBC_Testing</fullName>
        <filterScope>Queue</filterScope>
        <label>GEMS DTU Queue</label>
        <queue>DTU_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GEMS_CDHP_Operations_Queue_GEMS_MBC_Testing</fullName>
        <filterScope>Queue</filterScope>
        <label>GEMS CDHP Operations Queue</label>
        <queue>GEMS_CDHP_Operations_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GEMS_FEAK_Analysis_Queue_GEMS_MBC_Testing</fullName>
        <filterScope>Queue</filterScope>
        <label>GEMS FEAK Analysis Queue</label>
        <queue>GEMS_FEAK_Analysis_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GEMS_FEAK_Testing_Queue_GEMS_MBC_Testing</fullName>
        <filterScope>Queue</filterScope>
        <label>GEMS FEAK Testing Queue</label>
        <queue>GEMS_FEAK_Testing_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS MBC Testing</pluralLabel>
    <recordTypes>
        <fullName>CDHP_Testing</fullName>
        <active>true</active>
        <description>This is the Record Type for MBC CDHP Testing</description>
        <label>CDHP Testing</label>
    </recordTypes>
    <recordTypes>
        <fullName>DTU_Testing</fullName>
        <active>true</active>
        <description>This is the Record Type for MBC DTU Testing</description>
        <label>DTU Testing</label>
    </recordTypes>
    <recordTypes>
        <fullName>FEAK_Analysis</fullName>
        <active>true</active>
        <description>This Record Type is used for FEAK Analysis on the Medical Benefit Coding BA Level Case</description>
        <label>FEAK Analysis</label>
    </recordTypes>
    <recordTypes>
        <fullName>FEAK_Testing</fullName>
        <active>true</active>
        <description>This Record Type is used for FEAK Testing on the Medical Benefit Coding BA Level Case</description>
        <label>FEAK Testing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shared_Accums_Testing</fullName>
        <active>true</active>
        <description>This is for the Shared Accums Testing for Medical Benefit Coding BA Level Cases</description>
        <label>Shared Accums Testing</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DTU_Sign_Off_Date_required_when_Passed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name== &apos;DTU Testing&apos; , ISBLANK(DTU_Sign_Off_Date__c),
TEXT(Status__c) == &apos;Passed&apos;
)</errorConditionFormula>
        <errorMessage>DTU Sign Off Date is a required field on the DTU Record Type when changing the status to Passed.</errorMessage>
    </validationRules>
</CustomObject>